--- a/assets/css/zoo.css
+++ b/assets/css/zoo.css
@@ -3,7 +3,22 @@
     padding: 0px;
 }
 html , body {
-    height: 100vh
+    height: 100vh;
+    margin: 0;
+ 
+    
+    
+  
+    
+}
+.module{
+    background-image: url('/assets/bg/ZOO.png') !important;
+   
+    background-size: cover;
+    background-repeat: no-repeat;
+background-position: center;
+
+  height: 100%;
 }
 .barSide{
    position: absolute;
